--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fly App</title>
+    <link rel="stylesheet" href="assets/app.css" type="text/css"/> 
 </head>
 <body>
     <div id="root"></div>
